imporve the long table memory management make shift key same as ctrl + space to open/close fireinput add pref key to remember the encoding add japanese support add default preference setup (mainly for language interface)

--- a/locale/en-US/fireinput.properties
+++ b/locale/en-US/fireinput.properties
@@ -29,6 +29,7 @@ fireinput.pinyin.shuang.smartabc.label=SmartABC Shuang Pin
 fireinput.wubi86.label=Wubi 86
 fireinput.wubi98.label=Wubi 98
 fireinput.cangjie5.label=Cangjie 5
+fireinput.japanese.label=Japanese
 fireinput.previous.selection=Previous
 fireinput.next.selection=Next
 fireinput.accept=OK
@@ -104,6 +105,7 @@ fireinput.pinyin.shuang.smartabc.label.zh=智能ABC双拼
 fireinput.wubi86.label.zh=五笔86
 fireinput.wubi98.label.zh=五笔98
 fireinput.cangjie5.label.zh=倉頡第五代
+fireinput.japanese.label.zh=日本语
 fireinput.previous.selection.zh=前页
 fireinput.next.selection.zh=后页
 fireinput.accept.zh=保存
@@ -149,3 +151,81 @@ fireinput.theme.default.label.zh=系统默认
 fireinput.pref.imebar.position.zh=火输位置 
 fireinput.pref.imebar.position.top.zh=置顶 
 fireinput.pref.imebar.position.bottom.zh=靠下 
+
+
+# 日本语#############################
+fireinput.statusbar.tooltip.open.jp=打开火输(%FIREINPUT_OPENKEY%)/右点鼠标设置
+fireinput.statusbar.tooltip.close.jp=关闭(%FIREINPUT_OPENKEY%) 
+fireinput.choose.interface.language.jp=界面语言
+fireinput.close.IME.jp=关闭
+fireinput.show.IME.jp=打开火输
+fireinput.pref.auto.insert.jp=四码自动上屏
+fireinput.pref.auto.insert.tooltip.jp=若无重码字词，自动将字词输入窗口，而无须按空格键
+fireinput.pref.save.history.jp=保存输入历史
+fireinput.pref.input.method.jp=默认输入法
+fireinput.pref.update.freq.jp=调整词频
+fireinput.chinese.label.jp=中文
+fireinput.english.label.jp=英文
+fireinput.pref.amb.label.jp=模糊音
+fireinput.pref.open.hotkey.jp=热键开启
+fireinput.pref.open.hotkey.tooltip.jp=热键设置会在下一次启动时才会激活
+fireinput.toggle.ime.button.jp=切换输入模式(CTRL+空格)
+fireinput.toggle.half.button.jp=切换全/半角(CTRL+Alt+M)
+fireinput.toggle.punct.button.jp=切换标点符号(CTRL+Alt+P)
+fireinput.method.chinese.value.jp=中
+fireinput.method.big5.value.jp=繁
+fireinput.method.english.value.jp=英
+fireinput.pinyin.quan.label.jp=智能全拼
+fireinput.pinyin.shuang.ziguang.label.jp=紫光双拼
+fireinput.pinyin.shuang.ms.label.jp=微软双拼
+fireinput.pinyin.shuang.chinesestar.label.jp=中文之星双拼
+fireinput.pinyin.shuang.smartabc.label.jp=智能ABC双拼
+fireinput.wubi86.label.jp=五笔86
+fireinput.wubi98.label.jp=五笔98
+fireinput.cangjie5.label.jp=倉頡第五代
+fireinput.japanese.label.jp=日本语
+fireinput.previous.selection.jp=前页
+fireinput.next.selection.jp=后页
+fireinput.accept.jp=保存
+fireinput.cancel.jp=取消
+fireinput.special.char.label.jp=特殊符号
+fireinput.emotion.label.jp=网络图案
+fireinput.history.list.jp=文章记录
+fireinput.chinese.number.label.jp=大写数字
+fireinput.normal.symbol.label.jp=标点符号
+fireinput.special.number.label.jp=特殊数字
+fireinput.currency.label.jp=货币
+fireinput.arrow.label.jp=箭头
+fireinput.math.label.jp=数学
+fireinput.latin.label.jp=拉丁字符
+fireinput.greek.label.jp=希腊字符
+fireinput.table.label.jp=制表
+fireinput.block.label.jp=图案
+fireinput.geometry.label.jp=几何
+fireinput.measure.label.jp=度量
+fireinput.datetime.label.jp=时间日期
+fireinput.help.label.jp=使用帮助
+fireinput.help.home.jp=火输网站 
+fireinput.help.document.jp=火输文档
+fireinput.help.shortkey.jp=快捷键
+fireinput.help.editor.jp=离线编辑
+fireinput.help.donate.jp=我要出份力 
+fireinput.help.newrelease.jp=火输新版
+fireinput.help.newrelease.text.jp=火输新版%VERSION%发布了
+fireinput.help.about.jp=关于火输
+fireinput.emotion.mouse.tooltips.jp=左点插入/右点复制
+fireinput.encoding.switch.jp=火输转换
+fireinput.encoding.jptobg.jp=简->繁
+fireinput.encoding.bgtozh.jp=繁->简
+fireinput.emotion.user.action.jp=加入图案
+fireinput.emotion.user.list.jp=我的图案 
+fireinput.wordtable.enhance.jp=加入火输词库: 
+fireinput.search.label.jp=搜索(F4)
+fireinput.context.select.image.jp=加入火输图库
+fireinput.menu.setting.label.jp=火输设置 
+fireinput.theme.menu.label.jp=个性火输
+fireinput.theme.mime.label.jp=我的外观
+fireinput.theme.default.label.jp=系统默认
+fireinput.pref.imebar.position.jp=火输位置 
+fireinput.pref.imebar.position.top.jp=置顶 
+fireinput.pref.imebar.position.bottom.jp=靠下 
