add more JP IME related changes

--- a/locale/en-US/fireinput.properties
+++ b/locale/en-US/fireinput.properties
@@ -21,6 +21,7 @@ fireinput.toggle.punct.button=Change Punctutation Mode(CTRL+Alt+P)
 fireinput.method.chinese.value=ZH
 fireinput.method.big5.value=BG
 fireinput.method.english.value=EN
+fireinput.method.japanese.value=JP
 fireinput.pinyin.quan.label=Quan Pin
 fireinput.pinyin.shuang.ziguang.label=ZiGuang Shuang Pin
 fireinput.pinyin.shuang.ms.label=Microsoft Shuang Pin
@@ -97,6 +98,7 @@ fireinput.toggle.punct.button.zh=切换标点符号(CTRL+Alt+P)
 fireinput.method.chinese.value.zh=中
 fireinput.method.big5.value.zh=繁
 fireinput.method.english.value.zh=英
+fireinput.method.japanese.value.zh=日
 fireinput.pinyin.quan.label.zh=智能全拼
 fireinput.pinyin.shuang.ziguang.label.zh=紫光双拼
 fireinput.pinyin.shuang.ms.label.zh=微软双拼
@@ -175,6 +177,7 @@ fireinput.toggle.punct.button.jp=切换标点符号(CTRL+Alt+P)
 fireinput.method.chinese.value.jp=中
 fireinput.method.big5.value.jp=繁
 fireinput.method.english.value.jp=英
+fireinput.method.japanese.value.jp=日
 fireinput.pinyin.quan.label.jp=智能全拼
 fireinput.pinyin.shuang.ziguang.label.jp=紫光双拼
 fireinput.pinyin.shuang.ms.label.jp=微软双拼
