add autoLoad option to disable/enable fireinput auto loading when firefox starts

--- a/locale/en-US/fireinput.properties
+++ b/locale/en-US/fireinput.properties
@@ -10,6 +10,7 @@ fireinput.pref.auto.insert.tooltip=Insert the chars without hitting space key if
 fireinput.pref.save.history=Save input history 
 fireinput.pref.input.method=Default Input Method
 fireinput.pref.update.freq=Update word frequence
+fireinput.pref.auto.load=Auto Load
 fireinput.chinese.label=Chinese
 fireinput.english.label=English
 fireinput.pref.amb.label=Amb
@@ -85,6 +86,7 @@ fireinput.pref.auto.insert.tooltip.zh=若无重码字词，自动将字词输入
 fireinput.pref.save.history.zh=保存输入历史
 fireinput.pref.input.method.zh=默认输入法
 fireinput.pref.update.freq.zh=调整词频
+fireinput.pref.auto.load.zh=火输自动加载
 fireinput.chinese.label.zh=中文
 fireinput.english.label.zh=英文
 fireinput.pref.amb.label.zh=模糊音
