--- a/locale/en-US/fireinput.properties
+++ b/locale/en-US/fireinput.properties
@@ -1,6 +1,6 @@
 # default 
-fireinput.statusbar.tooltip.open=Click to open(%FIREINPUT_OPENKEY%)/Right click to customize 
-fireinput.statusbar.tooltip.close=Click to close(%FIREINPUT_OPENKEY%) 
+fireinput.statusbar.tooltip.open=Click to open(%openKey)/Right click to customize 
+fireinput.statusbar.tooltip.close=Click to close(%openKey%) 
 fireinput.choose.interface.language=Interface Language
 fireinput.input.method=IME
 fireinput.close.IME=Close
@@ -14,22 +14,23 @@ fireinput.pref.auto.load=Auto Load
 fireinput.chinese.label=Chinese
 fireinput.english.label=English
 fireinput.pref.amb.label=Amb
-fireinput.pref.open.hotkey=Fireinput Open HotKey
-fireinput.pref.open.hotkey.tooltip=Fireinput open hotkey will take affect until browser restarts
-fireinput.toggle.ime.button=Change IME(CTRL+Space)
-fireinput.toggle.half.button=Change Half/Full Mode(CTRL+Alt+M)
-fireinput.toggle.punct.button=Change Punctutation Mode(CTRL+Alt+P)
+fireinput.pref.amb.inputkey.match=Disable AMB Pinyin
+fireinput.switch.inputmethod.button=Toggle IME(%switchInputMethodKey%)
+fireinput.toggle.ime.button=Toggle IME encoding(%toggleIMEKey% or %quickToggleIMEKey%). If press %quickToggleIMEKey% two times quickly, Fireinput IME will be disabled forever. 
+fireinput.toggle.half.button=Toggle Half/Full Mode(%toggleHalfKey%)
+fireinput.toggle.punct.button=Toggle Punctutation Mode(%togglePuncKey%)
 fireinput.method.chinese.value=ZH
 fireinput.method.big5.value=BG
 fireinput.method.english.value=EN
 fireinput.pinyin.quan.label=Quan Pin
 fireinput.pinyin.shuang.ziguang.label=ZiGuang Shuang Pin
-fireinput.pinyin.shuang.ms.label=Microsoft Shuang Pin
+fireinput.pinyin.shuang.ms.label=Zrm/MS Shuang Pin
 fireinput.pinyin.shuang.chinesestar.label=ChineseStar Shuang Pin
 fireinput.pinyin.shuang.smartabc.label=SmartABC Shuang Pin
 fireinput.wubi86.label=Wubi 86
 fireinput.wubi98.label=Wubi 98
 fireinput.cangjie5.label=Cangjie 5
+fireinput.pref.ime.advanced.label=IME Advanced Config...
 fireinput.previous.selection=Previous
 fireinput.next.selection=Next
 fireinput.accept=OK
@@ -54,12 +55,12 @@ fireinput.help.label=Help
 fireinput.help.home=Fireinput Website 
 fireinput.help.document=Documentation
 fireinput.help.shortkey=Keyboard Shortcuts
-fireinput.help.editor=Fireinput Editor
+fireinput.help.editor=Fireinput Editor   %openEditorKey%
 fireinput.help.donate=Make it better 
 fireinput.help.newrelease=Fireinput new 
 fireinput.help.newrelease.text=Fireinput new version %VERSION% is here 
 fireinput.help.about=About Fireinput 
-fireinput.emotion.mouse.tooltips=Left click to insert/right click to copy 
+fireinput.emotion.mouse.tooltips=Left click to insert url/right click to insert bbcoded url
 fireinput.encoding.switch=Fireinput encoding
 fireinput.encoding.zhtobg=Traditional Chinese
 fireinput.encoding.bgtozh=Simplified Chiense
@@ -75,9 +76,13 @@ fireinput.theme.default.label=Default
 fireinput.pref.imebar.position=Fireinput Position 
 fireinput.pref.imebar.position.top=Top 
 fireinput.pref.imebar.position.bottom=Bottom
+fireinput.pref.hotkey.config.label=Config Hotkey
+fireinput.table.management.label=Table management 
+fireinput.table.updating.label=Table updating...
+fireinput.pref.inputwindow.setting=Input Window Setting
 # 中文#############################
-fireinput.statusbar.tooltip.open.zh=打开火输(%FIREINPUT_OPENKEY%)/右点鼠标设置
-fireinput.statusbar.tooltip.close.zh=关闭(%FIREINPUT_OPENKEY%) 
+fireinput.statusbar.tooltip.open.zh=打开火输(%openKey%)/右点鼠标设置
+fireinput.statusbar.tooltip.close.zh=关闭(%openKey%) 
 fireinput.choose.interface.language.zh=界面语言
 fireinput.close.IME.zh=关闭
 fireinput.show.IME.zh=打开火输
@@ -90,22 +95,23 @@ fireinput.pref.auto.load.zh=火输自动加载
 fireinput.chinese.label.zh=中文
 fireinput.english.label.zh=英文
 fireinput.pref.amb.label.zh=模糊音
-fireinput.pref.open.hotkey.zh=热键开启
-fireinput.pref.open.hotkey.tooltip.zh=热键设置会在下一次启动时才会激活
-fireinput.toggle.ime.button.zh=切换输入模式(CTRL+空格)
-fireinput.toggle.half.button.zh=切换全/半角(CTRL+Alt+M)
-fireinput.toggle.punct.button.zh=切换标点符号(CTRL+Alt+P)
+fireinput.pref.amb.inputkey.match.zh=取消模糊拼音
+fireinput.switch.inputmethod.button.zh=切换输入法(%switchInputMethodKey%)
+fireinput.toggle.ime.button.zh=切换输入模式(%toggleIMEKey% or %quickToggleIMEKey%). 如快速连续击%quickToggleIMEKey% 键两次, 火输完全关闭 
+fireinput.toggle.half.button.zh=切换全/半角(%toggleHalfKey%)
+fireinput.toggle.punct.button.zh=切换标点符号(%togglePuncKey%)
 fireinput.method.chinese.value.zh=中
 fireinput.method.big5.value.zh=繁
 fireinput.method.english.value.zh=英
 fireinput.pinyin.quan.label.zh=智能全拼
 fireinput.pinyin.shuang.ziguang.label.zh=紫光双拼
-fireinput.pinyin.shuang.ms.label.zh=微软双拼
+fireinput.pinyin.shuang.ms.label.zh=自然码/微软双拼
 fireinput.pinyin.shuang.chinesestar.label.zh=中文之星双拼
 fireinput.pinyin.shuang.smartabc.label.zh=智能ABC双拼
 fireinput.wubi86.label.zh=五笔86
 fireinput.wubi98.label.zh=五笔98
 fireinput.cangjie5.label.zh=倉頡第五代
+fireinput.pref.ime.advanced.label.zh=输入法高级设置...
 fireinput.previous.selection.zh=前页
 fireinput.next.selection.zh=后页
 fireinput.accept.zh=保存
@@ -130,12 +136,12 @@ fireinput.help.label.zh=使用帮助
 fireinput.help.home.zh=火输网站 
 fireinput.help.document.zh=火输文档
 fireinput.help.shortkey.zh=快捷键
-fireinput.help.editor.zh=离线编辑
+fireinput.help.editor.zh=离线编辑   %openEditorKey%
 fireinput.help.donate.zh=我要出份力 
 fireinput.help.newrelease.zh=火输新版
 fireinput.help.newrelease.text.zh=火输新版%VERSION%发布了
 fireinput.help.about.zh=关于火输
-fireinput.emotion.mouse.tooltips.zh=左点插入/右点复制
+fireinput.emotion.mouse.tooltips.zh=左点插入链接/右点插入bbcode链接
 fireinput.encoding.switch.zh=火输转换
 fireinput.encoding.zhtobg.zh=简->繁
 fireinput.encoding.bgtozh.zh=繁->简
@@ -151,3 +157,7 @@ fireinput.theme.default.label.zh=系统默认
 fireinput.pref.imebar.position.zh=火输位置 
 fireinput.pref.imebar.position.top.zh=置顶 
 fireinput.pref.imebar.position.bottom.zh=靠下 
+fireinput.pref.hotkey.config.label.zh=热键管理
+fireinput.table.management.label.zh=词库管理
+fireinput.table.updating.label.zh=词库更新中...
+fireinput.pref.inputwindow.setting.zh=输入窗口设置
