add zhengma enable import for wubi/cangjie/zhengma

--- a/locale/en-US/fireinput.properties
+++ b/locale/en-US/fireinput.properties
@@ -30,6 +30,7 @@ fireinput.pinyin.shuang.smartabc.label=SmartABC Shuang Pin
 fireinput.wubi86.label=Wubi 86
 fireinput.wubi98.label=Wubi 98
 fireinput.cangjie5.label=Cangjie 5
+fireinput.zhengma.label=Zhengma
 fireinput.pref.ime.advanced.label=IME Advanced Config...
 fireinput.previous.selection=Previous
 fireinput.next.selection=Next
@@ -111,6 +112,7 @@ fireinput.pinyin.shuang.smartabc.label.zh=智能ABC双拼
 fireinput.wubi86.label.zh=五笔86
 fireinput.wubi98.label.zh=五笔98
 fireinput.cangjie5.label.zh=倉頡第五代
+fireinput.zhengma.label.zh=郑码
 fireinput.pref.ime.advanced.label.zh=输入法高级设置...
 fireinput.previous.selection.zh=前页
 fireinput.next.selection.zh=后页
