display release infor based on the current version

--- a/locale/en-US/fireinput.properties
+++ b/locale/en-US/fireinput.properties
@@ -60,6 +60,8 @@ fireinput.help.editor=Fireinput Editor   %openEditorKey%
 fireinput.help.donate=Make it better 
 fireinput.help.newrelease=Fireinput new 
 fireinput.help.newrelease.text=Fireinput new version %VERSION% is here 
+fireinput.help.newdevrelease=Fireinput new development release  
+fireinput.help.newdevrelease.text=Fireinput new development version %VERSION% is here 
 fireinput.help.about=About Fireinput 
 fireinput.emotion.mouse.tooltips=Left click to insert url/right click to insert bbcoded url
 fireinput.encoding.switch=Fireinput encoding
@@ -142,6 +144,8 @@ fireinput.help.editor.zh=离线编辑   %openEditorKey%
 fireinput.help.donate.zh=我要出份力 
 fireinput.help.newrelease.zh=火输新版
 fireinput.help.newrelease.text.zh=火输新版%VERSION%发布了
+fireinput.help.newdevrelease.zh=火输新开发版
+fireinput.help.newdevrelease.text.zh=火输新开发版%VERSION%发布了
 fireinput.help.about.zh=关于火输
 fireinput.emotion.mouse.tooltips.zh=左点插入链接/右点插入bbcode链接
 fireinput.encoding.switch.zh=火输转换
