add basic floating ime panel support; add per tab input capability

--- a/locale/en-US/fireinput.properties
+++ b/locale/en-US/fireinput.properties
@@ -79,6 +79,7 @@ fireinput.theme.default.label=Default
 fireinput.pref.imebar.position=Fireinput Position 
 fireinput.pref.imebar.position.top=Top 
 fireinput.pref.imebar.position.bottom=Bottom
+fireinput.pref.imebar.position.floating=Floating
 fireinput.pref.hotkey.config.label=Config Hotkey
 fireinput.table.management.label=Table management 
 fireinput.table.updating.label=Table updating...
@@ -163,6 +164,7 @@ fireinput.theme.default.label.zh=系统默认
 fireinput.pref.imebar.position.zh=火输位置 
 fireinput.pref.imebar.position.top.zh=置顶 
 fireinput.pref.imebar.position.bottom.zh=靠下 
+fireinput.pref.imebar.position.floating.zh=漂浮
 fireinput.pref.hotkey.config.label.zh=热键管理
 fireinput.table.management.label.zh=词库管理
 fireinput.table.updating.label.zh=词库更新中...
