--- a/locale/en-US/fireinput.properties
+++ b/locale/en-US/fireinput.properties
@@ -17,7 +17,7 @@ fireinput.pref.amb.label=Amb
 fireinput.pref.amb.inputkey.match=Disable AMB Pinyin
 fireinput.switch.inputmethod.button=Toggle IME(%switchInputMethodKey%)
 fireinput.toggle.ime.button=Toggle IME encoding(%toggleIMEKey% or %quickToggleIMEKey%). If press %quickToggleIMEKey% two times quickly, Fireinput IME will be disabled forever. 
-fireinput.toggle.half.button=Toggle Half/Full Mode(%toggleHalfKey%)
+fireinput.toggle.half.button=Toggle Half/Full Mode(%toggleLetterKey%)
 fireinput.toggle.punct.button=Toggle Punctutation Mode(%togglePuncKey%)
 fireinput.method.chinese.value=ZH
 fireinput.method.big5.value=BG
@@ -84,6 +84,8 @@ fireinput.pref.hotkey.config.label=Config Hotkey
 fireinput.table.management.label=Table management 
 fireinput.table.updating.label=Table updating...
 fireinput.pref.inputwindow.setting=Input Window Setting
+fireinput.pref.letter.mode.followime=Letter Mode Follows IME switch
+fireinput.pref.punct.mode.followime=Punct Mode Follows IME switch
 # 中文#############################
 fireinput.statusbar.tooltip.open.zh=打开火输(%openKey%)/右点鼠标设置
 fireinput.statusbar.tooltip.close.zh=关闭(%openKey%) 
@@ -102,7 +104,7 @@ fireinput.pref.amb.label.zh=模糊音
 fireinput.pref.amb.inputkey.match.zh=取消模糊拼音
 fireinput.switch.inputmethod.button.zh=切换输入法(%switchInputMethodKey%)
 fireinput.toggle.ime.button.zh=切换输入模式(%toggleIMEKey% or %quickToggleIMEKey%). 如快速连续击%quickToggleIMEKey% 键两次, 火输完全关闭 
-fireinput.toggle.half.button.zh=切换全/半角(%toggleHalfKey%)
+fireinput.toggle.half.button.zh=切换全/半角(%toggleLetterKey%)
 fireinput.toggle.punct.button.zh=切换标点符号(%togglePuncKey%)
 fireinput.method.chinese.value.zh=中
 fireinput.method.big5.value.zh=繁
@@ -169,3 +171,5 @@ fireinput.pref.hotkey.config.label.zh=热键管理
 fireinput.table.management.label.zh=词库管理
 fireinput.table.updating.label.zh=词库更新中...
 fireinput.pref.inputwindow.setting.zh=输入窗口设置
+fireinput.pref.letter.mode.followime.zh=全角自动切换
+fireinput.pref.punct.mode.followime.zh=标点自动切换
